# LuaJIT-cmake-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dobuild.sh  main.cpp
libs/LuaJitLib/: CMakeLists.txt  build-fat-luajit.sh  build-linux-luajit.sh  build-mingw-luajit.sh  build-msvc-luajit.bat
libs/luajitlib/: CMakeLists.txt  README.md  build-macos-luajit.sh
