cmake_minimum_required(VERSION 3.15)
project(luajit-test)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
set(LUAJIT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libs/LuaJIT/")
add_executable(${PROJECT_NAME} "main.cpp")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs/luajit-cmake)
target_link_libraries(luajit-test PRIVATE luajit::lib luajit::header)
